<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/new_game_actionbar"
        android:title="@string/new_game"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/file"
        android:title="@string/file">

        <menu>
            <item
                android:id="@+id/new_game_menu_item"
                android:title="@string/new_game" />
            <item
                android:id="@+id/save_game_menu_item"
                android:title="@string/save_game" />
            <item
                android:id="@+id/load_game_menu_item"
                android:title="@string/load_game" />
        </menu>
    </item>
    <item
        android:id="@+id/share_menu_item"
        android:title="@string/share" />
    <item
        android:id="@+id/scores_menu_item"
        android:title="@string/scores" />
    <item
        android:id="@+id/settings_menu_item"
        android:title="@string/settings" />
    <item
        android:id="@+id/about_menu_item"
        android:title="@string/about" />
</menu>