<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffeeeeee"
        android:weightSum="1">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:padding="10dp"
            android:background="@drawable/numbers_bg"
            android:id="@+id/userPhoto"
            android:src="@drawable/user"/>

        <Button
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/take_photo"
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/drawer_photo_button" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:weightSum="1">
            <TextView
                android:layout_weight="0.4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:text="@string/username"/>

            <TextView
                android:layout_weight="0.6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTileMore"
                android:textSize="18dp"
                android:text="@string/not_signed_in"
                android:id="@+id/drawer_username" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:weightSum="1">
            <TextView
                android:layout_weight="0.4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:text="@string/userId"/>

            <TextView
                android:layout_weight="0.6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTileMore"
                android:textSize="18dp"
                android:text="@string/not_signed_in"
                android:id="@+id/drawer_id" />
        </LinearLayout>

        <Button
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/log_in" />

        <Button
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/play_online"
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/play_online" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/title_activity_settings_dialog"
            android:id="@+id/textView" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView2"
            android:layout_gravity="center_horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:text="@string/audio"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1">
                    <TextView
                        android:layout_weight="0.8"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:text="@string/sound"/>

                    <TextView
                        android:layout_weight="0.2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorTileMore"
                        android:textSize="18dp"
                        android:text="Off"
                        android:id="@+id/sound_On" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:text="@string/visual"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1">
                    <TextView
                        android:layout_weight="0.8"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:text="@string/landscape"/>

                    <TextView
                        android:layout_weight="0.2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorTileMore"
                        android:textSize="18dp"
                        android:text="Off"
                        android:id="@+id/landscape_On" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1">
                    <TextView
                        android:layout_weight="0.8"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:text="@string/fullscreen"/>

                    <TextView
                        android:layout_weight="0.2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorTileMore"
                        android:textSize="18dp"
                        android:text="Off"
                        android:id="@+id/fullscreen_On" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1">
                    <TextView
                        android:layout_weight="0.8"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:text="@string/blackAndWhite"/>

                    <TextView
                        android:layout_weight="0.2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorTileMore"
                        android:textSize="18dp"
                        android:text="Off"
                        android:id="@+id/blackAndWhite_On" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:text="@string/gameplay"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1">
                    <TextView
                        android:layout_weight="0.8"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:text="@string/originalMode"/>

                    <TextView
                        android:layout_weight="0.2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorTileMore"
                        android:textSize="18dp"
                        android:text="Off"
                        android:id="@+id/originalMode_On" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1">
                    <TextView
                        android:layout_weight="0.8"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:text="@string/timed"/>

                    <TextView
                        android:layout_weight="0.2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorTileMore"
                        android:textSize="18dp"
                        android:text="Off"
                        android:id="@+id/timed_On" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1">
                    <TextView
                        android:layout_weight="0.8"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:text="@string/unlimited"/>

                    <TextView
                        android:layout_weight="0.2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorTileMore"
                        android:textSize="18dp"
                        android:text="Off"
                        android:id="@+id/unlimited_On" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>