<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="schnauzer.digital.life2048.main_header_fragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.09"
        android:weightSum="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#ffecc6">

            <TextView android:text="@string/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_gravity="center_horizontal"/>

            <TextView android:text="@string/score_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:id="@+id/currentScoreText"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#ffecc6">

            <TextView android:text="@string/best"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_gravity="center_horizontal"/>

            <TextView android:text="@string/best_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/score"
            android:id="@+id/scoreButton"
            android:layout_weight="0.3"/>

    </LinearLayout>

</FrameLayout>
